# generic_rag_app

./: .env  Makefile  README.md  document_loaders.py  gnews.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  upload_to_drive.py
bq-releases-notes/: README.md  main.py
bq-releases-notes/static/: app.js  index.html  styles.css
scripts/: run.sh  run_docs_loaders.sh
