[project]
name = "generic-rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-docling>=2.0.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
